Fixes #136 * Removed superfluous public/public abstract in interfaces * separated lines for declarations. * Replaced classical loop with Stream based approach * Use .isEmpty() instead of size() == 0 * Using Diamond operator instead of repeating type. * Using Stream based approach instead of using external library * Using JDK methods like "".repeat or stripTrailing() instead of manually iterating * Using Using JDK methods String.join(..) instead of StringUtils.join in example.
Fixes #140 - Replacing Deprecated Constructor Calls for Wrapper Classes